// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> should render Image component correctly 1`] = `
<div>
  <div>
    <div
      class="size-container"
    >
      <div
        class="image-container logo-light"
      >
        <img
          alt="alt"
          class="image fit"
          src="source_path"
          title="alt"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Image /> should render Image component with amp tag 1`] = `
<div>
  <div>
    <div
      class="size-container"
    >
      <div
        class="image-container logo-light"
      >
        <amp-img
          alt="alt"
          classname="image fit"
          layout="fill"
          src="source_path"
          title="alt"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Image /> should render Image component with aspect_ratio 1`] = `
<div>
  <div>
    <div
      class="size-container"
    >
      <div
        class="image-container lock-ratio logo-light"
        style="height: 0px; padding-bottom: 65.52631578947367%;"
      >
        <img
          alt="alt"
          class="image fit"
          src="source_path"
          title="alt"
        />
      </div>
    </div>
  </div>
</div>
`;
